# flappy-bevy

./: .gitignore  Cargo.toml  README.md  build.bat  build.sh
.github/workflows/: rust.yml
src/: main.rs
